--- a/experiments/boilerplate.html
+++ b/experiments/boilerplate.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <script src='vendor/three.js/build/three.min.js'></script>
 <script src='vendor/three.js/examples/js/controls/OrbitControls.js'></script>
-<body style='margin: 0px; overflow: hidden; text-align:center;'><script>
-// window.addEventListener('load',function(){
+<div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
+	<a href="https://github.com/jeromeetienne/threejs-boilerplate" target="_blank">Boilerplate</a>
+	for
+	<a href="http://threejs.org" target="_blank">three.js</a>
+	- works on desktop and mobile
+</div><body style='margin: 0px; overflow: hidden; text-align:center;'><script>
+window.addEventListener('load',function(){
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
 	//////////////////////////////////////////////////////////////////////////////////
@@ -94,6 +99,5 @@
 window.renderer = renderer
 window.camera = camera
 window.scene = scene
-// })
+})
 </script></body>
-</html>
