--- a/experiments/boilerplate2.html
+++ b/experiments/boilerplate2.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-<script src='vendor/three.js/build/three.min.js'></script>
-<script src='vendor/three.js/examples/js/controls/OrbitControls.js'></script>
-<div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
-	<a href="https://github.com/jeromeetienne/threejs-boilerplate" target="_blank">Boilerplate</a>
-	for
-	<a href="http://threejs.org" target="_blank">three.js</a>
-	- works on desktop and mobile
-</div><body style='margin: 0px; overflow: hidden; text-align:center;'><script>
+<html lang="en">
+<script src='../examplesvendor/three.js/build/three.min.js'></script>
+<script src='../examplesvendor/three.js/examples/js/controls/OrbitControls.js'></script>
+<body style='margin: 0px; overflow: hidden; text-align:center;'><script>
+// window.addEventListener('load',function(){
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
 	//////////////////////////////////////////////////////////////////////////////////
@@ -88,4 +84,16 @@
 			onRenderFct(deltaMsec/1000, nowMsec/1000)
 		})
 	})
+
+
+//////////////////////////////////////////////////////////////////////////////////
+//		export some globals
+//////////////////////////////////////////////////////////////////////////////////
+
+// FIXME how come i need to export those ???
+window.renderer = renderer
+window.camera = camera
+window.scene = scene
+// })
 </script></body>
+</html>
