--- a/src/panel.html
+++ b/src/panel.html
@@ -146,7 +146,9 @@ input.Input {
 	<script src="js/inspectdevtools-editor.js"></script>
 	<script src="js/inspectdevtools-init-ui.js"></script>
 	<script src="js/inspectdevtools-onmessage.js"></script>
-	<script src="js/contentscript-main.js"></script>
+	<script src="js/contentscript-00-instrumenttools.js"></script>
+	<script src="js/contentscript-99-main.js"></script>
+	<script src="js/contentscript-99-onload.js"></script>
 	<script src="js/inspectdevtools-backgroundpage.js"></script>
 	<script src="js/inspectdevtools-main.js"></script>
 </body></html>
