--- a/src/panel.html
+++ b/src/panel.html
@@ -150,6 +150,7 @@ input.Input {
 	<script src="js/contentscript-10-changefromdevtools.js"></script>
 	<script src="js/contentscript-20-select.js"></script>
 	<script src="js/contentscript-30-autorefresh.js"></script>
+	<script src="js/contentscript-30-object3dtojson.js"></script>
 	<script src="js/contentscript-99-instrumentation.js"></script>
 	<script src="js/contentscript-99-onload.js"></script>
 	<script src="js/inspectdevtools-backgroundpage.js"></script>
