--- a/src/panel.html
+++ b/src/panel.html
@@ -25,9 +25,9 @@
 <script src='vendor/signals.min.js'></script>
 		
 <!-- tree view -->
-<link href='js/treeView/treeView.css' rel='stylesheet' type='text/css'>
-<script src="js/treeView/treeView.js"></script>
-<script src="js/treeView/treeViewItem.js"></script>
+<link  href='js/panels-ui/treeView/treeView.css' rel='stylesheet' type='text/css'>
+<script src="js/panels-ui/treeView/treeView.js"></script>
+<script src="js/panels-ui/treeView/treeViewItem.js"></script>
 <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 
 <body>
@@ -142,17 +142,19 @@ input.Input {
 	<script src="js/panels-ui/panel-ui-material-shader.js"></script>
 	<script src="js/panels-ui/panel-ui-settings.js"></script>
 	<script src="js/panels-ui/panel-ui-treeview.js"></script>
+
+	<script src="js/contentscripts/00-instrumenttools.js"></script>
+	<script src="js/contentscripts/10-changefromdevtools.js"></script>
+	<script src="js/contentscripts/20-select.js"></script>
+	<script src="js/contentscripts/30-autorefresh.js"></script>
+	<script src="js/contentscripts/30-object3dtojson.js"></script>
+	<script src="js/contentscripts/99-instrumentation.js"></script>
+	<script src="js/contentscripts/99-onload.js"></script>
+
 	<script src="js/inspectdevtools-injector.js"></script>
 	<script src="js/inspectdevtools-editor.js"></script>
 	<script src="js/inspectdevtools-init-ui.js"></script>
 	<script src="js/inspectdevtools-onmessage.js"></script>
-	<script src="js/contentscript-00-instrumenttools.js"></script>
-	<script src="js/contentscript-10-changefromdevtools.js"></script>
-	<script src="js/contentscript-20-select.js"></script>
-	<script src="js/contentscript-30-autorefresh.js"></script>
-	<script src="js/contentscript-30-object3dtojson.js"></script>
-	<script src="js/contentscript-99-instrumentation.js"></script>
-	<script src="js/contentscript-99-onload.js"></script>
 	<script src="js/inspectdevtools-backgroundpage.js"></script>
 	<script src="js/inspectdevtools-main.js"></script>
 </body></html>
