changed tabs color for visibility

--- a/src/panel.html
+++ b/src/panel.html
@@ -115,15 +115,15 @@ input.Input {
 }
 .tabContainer > ul.headers {
 	border-top: inherit;
-	border-bottom-color: #ccc;
+	border-bottom-color: #bbb;
 	height: 29px;
 }
 .tabContainer > ul.headers > li {
-	border-right: 1px solid #ccc;
+	border-right: 1px solid #bbb;
 }
 .tabContainer > ul.headers > li.active {
 	color : #888;
-	background-color: #ccc;
+	background-color: #ddd;
 }
 .tabContainer > ul.headers > li.disabled {
 	color : #ddd;
