Fixed link to @spite project

--- a/src/panel.html
+++ b/src/panel.html
@@ -40,7 +40,7 @@
 			<p>Bugs, ideas and feedback: 
 			<a href="https://github.com/jeromeetienne/threejs-inspector" target="_blank">GitHub page</a><br/>
 			It is a fork 
-			of <a href="https://github.com/spite/Three.jsExtension" target="_blank">Three.jsExtension</a>
+			of <a href="https://github.com/spite/ThreeJSEditorExtension" target="_blank">Three.jsExtension</a>
 			by the excelent <a href="https://twitter.com/thespite" target="_blank">@thespite</a>.
 			<br/>
 			<a href="http://www.learningthreejs.com" target="_blank">www.learningthreejs.com</a></p>
