--- a/experiments/boilerplate.html
+++ b/experiments/boilerplate.html
@@ -7,7 +7,12 @@
 	for
 	<a href="http://threejs.org" target="_blank">three.js</a>
 	- works on desktop and mobile
-</div><body style='margin: 0px; overflow: hidden; text-align:center;'><script>
+</div><body style='margin: 0px; overflow: hidden; text-align:center;'>
+
+<script>
+(function(){document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-core.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/src/js/libs/rafHijacker.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-three.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-main.js"></s'+'cript>');})()
+</script>
+<script>
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
 	//////////////////////////////////////////////////////////////////////////////////
@@ -94,7 +99,6 @@
 		})
 	})
 </script>
-<script>
-(function(){document.body.appendChild(document.createElement('script')).src='http://127.0.0.1:8080/experiments/inspect3js-core.js';document.body.appendChild(document.createElement('script')).src='http://127.0.0.1:8080/src/js/libs/rafHijacker.js';document.body.appendChild(document.createElement('script')).src='http://127.0.0.1:8080/experiments/inspect3js-three.js';document.body.appendChild(document.createElement('script')).src='http://127.0.0.1:8080/experiments/inspect3js-main.js';})();
-</script>
+
+
 </body>
