moved treeView into /src/js/libs

--- a/src/panel.html
+++ b/src/panel.html
@@ -25,9 +25,9 @@
 <script src='vendor/signals.min.js'></script>
 		
 <!-- tree view -->
-<link  href='js/panels-ui/treeView/treeView.css' rel='stylesheet' type='text/css'>
-<script src="js/panels-ui/treeView/treeView.js"></script>
-<script src="js/panels-ui/treeView/treeViewItem.js"></script>
+<link  href='js/libs/treeView/treeView.css' rel='stylesheet' type='text/css'>
+<script src='js/libs/treeView/treeView.js'></script>
+<script src='js/libs/treeView/treeViewItem.js'></script>
 <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 
 <body>
