--- a/src/panel.html
+++ b/src/panel.html
@@ -148,8 +148,8 @@ input.Input {
 	<!-- <script src="js/contentscripts/20-select.js"></script> -->
 	<!-- <script src="js/contentscripts/30-autorefresh.js"></script> -->
 	<!-- <script src="js/contentscripts/30-object3dtojson.js"></script> -->
-	<script src="js/contentscripts/99-instrumentation.js"></script>
-	<script src="js/contentscripts/99-onload.js"></script>
+	<!-- <script src="js/contentscripts/99-instrumentation.js"></script> -->
+	<!-- <script src="js/contentscripts/99-onload.js"></script> -->
 
 	<script src="js/inspectdevtools-injector.js"></script>
 	<script src="js/inspectdevtools-editor.js"></script>
