better icons with font awesomes

--- a/src/panel.html
+++ b/src/panel.html
@@ -29,6 +29,7 @@
 <script src='js/libs/treeView/treeView.js'></script>
 <script src='js/libs/treeView/treeViewItem.js'></script>
 <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="editor-css/ui.fontawesome.css">
 
 <body>
 	<div id="info">
