--- a/src/panel.html
+++ b/src/panel.html
@@ -144,13 +144,7 @@ input.Input {
 	<script src="js/panels-ui/panel-ui-settings.js"></script>
 	<script src="js/panels-ui/panel-ui-treeview.js"></script>
 
-	<!-- <script src="js/contentscripts/00-instrumenttools.js"></script> -->
-	<!-- <script src="js/contentscripts/10-changefromdevtools.js"></script> -->
-	<!-- <script src="js/contentscripts/20-select.js"></script> -->
-	<!-- <script src="js/contentscripts/30-autorefresh.js"></script> -->
-	<!-- <script src="js/contentscripts/30-object3dtojson.js"></script> -->
-	<!-- <script src="js/contentscripts/99-instrumentation.js"></script> -->
-	<!-- <script src="js/contentscripts/99-onload.js"></script> -->
+	<script src="js/panels-ui/panel-ui-texture.js"></script>
 
 	<script src="js/inspectdevtools-injector.js"></script>
 	<script src="js/inspectdevtools-editor.js"></script>
