--- a/experiments/exp-boilerplate.html
+++ b/experiments/exp-boilerplate.html
@@ -2,16 +2,20 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <script src='../examples/vendor/three.js/build/three.min.js'></script>
 <script src='../examples/vendor/three.js/examples/js/controls/OrbitControls.js'></script>
-<div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
-	<a href="https://github.com/jeromeetienne/threejs-boilerplate" target="_blank">Boilerplate</a>
-	for
-	<a href="http://threejs.org" target="_blank">three.js</a>
-	- works on desktop and mobile
-</div><body style='margin: 0px; overflow: hidden; text-align:center;'>
+<body style='margin: 0px; overflow: hidden;'>
 
+<!-- instrumentation BEGIN -->
+<link rel="stylesheet" href="../src/css/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="../src/js/libs/treeView/treeView.css">
+<div id="treeView" style='position: absolute; top: 0px;'></div>
+<script src="../src/js/libs/treeView/treeView.js" charset="utf-8"></script>
+<script src="../src/js/libs/treeView/treeViewItem.js" charset="utf-8"></script>
+<script src="./exp-treeview.js" charset="utf-8"></script>
 <script>
 (function(){document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-core.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/src/js/libs/raf-throttler.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-three.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-main.js"></s'+'cript>');})()
 </script>
+<!-- instrumentation END -->
+
 <script>
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
@@ -30,8 +34,10 @@
 
 	// init scene and camera
 	var scene	= new THREE.Scene();
+	scene.name	= 'myScene'
 	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.01, 1000);
 	camera.position.z = 2;
+	camera.name	= 'myCamera'
 	var controls	= new THREE.OrbitControls(camera)
 
 	//////////////////////////////////////////////////////////////////////////////////
