--- a/experiments/exp-boilerplate.html
+++ b/experiments/exp-boilerplate.html
@@ -5,14 +5,19 @@
 <body style='margin: 0px; overflow: hidden;'>
 
 <!-- instrumentation BEGIN -->
-<link rel="stylesheet" href="../src/css/font-awesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="../src/js/libs/treeView/treeView.css">
-<div id="treeView" style='position: absolute; top: 0px;'></div>
-<script src="../src/js/libs/treeView/treeView.js" charset="utf-8"></script>
-<script src="../src/js/libs/treeView/treeViewItem.js" charset="utf-8"></script>
-<script src="./exp-treeview.js" charset="utf-8"></script>
 <script>
-(function(){document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-core.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/src/js/libs/raf-throttler.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-three.js"></s'+'cript>');document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-main.js"></s'+'cript>');})()
+(function(){
+	document.write('<div id="treeView" style="position: absolute; top: 0px;""></div>');
+	document.write('<link  href="http://127.0.0.1:8080/src/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" >');
+	document.write('<link  href="http://127.0.0.1:8080/src/js/libs/treeView/treeView.css" rel="stylesheet" >');
+	document.write('<script src="http://127.0.0.1:8080/src/js/libs/treeView/treeView.js" charset="utf-8"></s'+'cript>');
+	document.write('<script src="http://127.0.0.1:8080/src/js/libs/treeView/treeViewItem.js" charset="utf-8"></s'+'cript>');
+	document.write('<script src="http://127.0.0.1:8080/experiments/exp-treeview.js" charset="utf-8"></s'+'cript>');
+	document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-core.js"></s'+'cript>');
+	document.write('<script src="http://127.0.0.1:8080/src/js/libs/raf-throttler.js"></s'+'cript>');
+	document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-three.js"></s'+'cript>');
+	document.write('<script src="http://127.0.0.1:8080/experiments/inspect3js-main.js"></s'+'cript>');
+})()
 </script>
 <!-- instrumentation END -->
 
@@ -46,11 +51,12 @@
 
 	var light	= new THREE.DirectionalLight()
 	light.position.set(1,1,1)
+	light.name	= 'myDirectional'
 	// light.color.set('red')
 	scene.add(light)
 
 	// add a torus knot	
-	var geometry	= new THREE.TorusKnotGeometry(0.5-0.12, 0.12, 32, 8);
+	var geometry	= new THREE.TorusKnotGeometry(0.5-0.12, 0.12, 128, 16);
 	// var geometry	= new THREE.BoxGeometry(1,1,1);
 	var material	= new THREE.MeshPhongMaterial({
 		// shading	: THREE.FlatShading,
@@ -60,9 +66,16 @@
 	var mesh	= new THREE.Mesh( geometry, material );
 	mesh.name	= 'torus knot'
 	scene.add( mesh );
+
+	var mesh2	= new THREE.Mesh( geometry, material );
+	mesh2.position.set(1,0,0)
+	mesh2.scale.set(0.5,0.5,0.5)
+	
+	mesh2.name	= 'torus knot2'
+	mesh.add( mesh2 );
 	
 	onRenderFcts.push(function(delta){
-		mesh.rotation.y += delta * Math.PI
+		mesh.rotation.y += delta * Math.PI / 10
 	})
 
 	// // add a torus	
