--- a/devtools.html
+++ b/devtools.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script src="injected_script.js"></script>
     <script src="devtools.js"></script>
   </head>
   <body>
