--- a/devtools.html
+++ b/devtools.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <script src="injected_script.js"></script>
-    <script src="devtools.js"></script>
+    <script src="scripts/injected_script.js"></script>
+    <script src="scripts/devtools.js"></script>
   </head>
   <body>
   </body>
