--- a/panel.html
+++ b/panel.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-	<script src="injected_script.js"></script>
-	<script src="panel.js"></script>
+	<script src="scripts/panel.js"></script>
 </head>
 <body>
         <h2>Three.js extension2</h2>
