starting to be a good shape

--- a/panel.html
+++ b/panel.html
@@ -1,10 +1,9 @@
 <html>
-<head>
-	<script src="scripts/panel.js"></script>
-</head>
 <body>
         <h2>Three.js extension2</h2>
 
-        <button onclick="superonclick()">blabla</button>
+        <button>blabla</button>
+    	<script src="scripts/injected_script.js"></script>
+	<script src="scripts/panel.js"></script>
 </body>
 </html>
