messaging from inspected window to devtools page

--- a/panel.html
+++ b/panel.html
@@ -2,7 +2,7 @@
 <body>
         <h2>Three.js extension2</h2>
 
-        <button>blabla</button>
+        <button>inject script</button>
     	<script src="scripts/injected_script.js"></script>
 	<script src="scripts/panel.js"></script>
 </body>
