--- a/panel.html
+++ b/panel.html
@@ -2,7 +2,9 @@
 <body>
         <h2>Three.js extension2</h2>
 
-        <button>inject script</button>
+        <button class='inject_script'>inject script</button>
+        <button class='capture_scene'>capture_scene</button>
+	
     	<script src="scripts/injected_script.js"></script>
 	<script src="scripts/panel.js"></script>
 </body>
