--- a/panel.html
+++ b/panel.html
@@ -43,6 +43,8 @@
 	<script src="scripts/ui/panel-ui-treeview.js"></script>
 
     	<script src="scripts/injected_script.js"></script>
+	<script src="scripts/panel-backgroundcnx.js"></script>
+	<script src="scripts/panel-init-ui.js"></script>
 	<script src="scripts/panel-injector.js"></script>
 	<script src="scripts/panel-editor.js"></script>
 	<script src="scripts/panel-main.js"></script>
