--- a/examples/boilerplate.html
+++ b/examples/boilerplate.html
@@ -53,9 +53,9 @@
 	mesh.name	= 'torus knot'
 	scene.add( mesh );
 	
-	onRenderFcts.push(function(delta){
-		mesh.rotation.y += delta * Math.PI
-	})
+	// onRenderFcts.push(function(delta){
+	// 	mesh.rotation.y += delta * Math.PI
+	// })
 
 
 	// // add a torus	
