imported geometry tabs

--- a/panel/panel.html
+++ b/panel/panel.html
@@ -45,6 +45,10 @@
 	<script src='ui/panel-ui-about.js'></script>
 	<script src='ui/panel-ui-noobject3d.js'></script>
 	<script src='ui/panel-ui-object3d.js'></script>
+	<script src='ui/panel-ui-nogeometry.js'></script>
+	<script src='ui/panel-ui-geometry.js'></script>
+	<script src='ui/panel-ui-geometry-sphere.js'></script>
+	<script src='ui/panel-ui-geometry-torusknot.js'></script>
 	<script src='ui/panel-ui-treeview.js'></script>
 	<script src='panel-backgroundcnx.js'></script>
 	<script src='panel-init-ui.js'></script>
