--- a/examples/boilerplate.html
+++ b/examples/boilerplate.html
@@ -42,8 +42,8 @@
 	scene.add(light)
 
 	// add a torus knot	
-	// var geometry	= new THREE.TorusKnotGeometry(0.5-0.12, 0.12, 32, 8);
-	var geometry	= new THREE.SphereGeometry(0.5, 32, 8);
+	var geometry	= new THREE.TorusKnotGeometry(0.5-0.12, 0.12, 32, 8);
+	// var geometry	= new THREE.SphereGeometry(0.5, 32, 8);
 	// var geometry	= new THREE.CubeGeometry(1,1,1);
 	var material	= new THREE.MeshPhongMaterial({
 		// shading	: THREE.FlatShading,
