--- a/panel/panel.html
+++ b/panel/panel.html
@@ -49,7 +49,13 @@
 	<script src='ui/panel-ui-geometry.js'></script>
 	<script src='ui/panel-ui-geometry-sphere.js'></script>
 	<script src='ui/panel-ui-geometry-torusknot.js'></script>
+	<script src="ui/panel-ui-nomaterial.js"></script>
+	<script src="ui/panel-ui-material.js"></script>
+	<script src="ui/panel-ui-material-shader.js"></script>
 	<script src='ui/panel-ui-treeview.js'></script>
+
+	<script src="ui/panel-ui-texture.js"></script>
+
 	<script src='panel-backgroundcnx.js'></script>
 	<script src='panel-init-ui.js'></script>
 	<script src='panel-injector.js'></script>
