--- a/panel/panel.html
+++ b/panel/panel.html
@@ -5,22 +5,22 @@
 <link rel=stylesheet href='css/panel.css'>
 
 <!-- ui lib -->
-<script src='editor-ui-libs/ui.js'></script>
-<script src='editor-ui-libs/ui.extras.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.vector2row.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.vector3row.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.lockablevector2row.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.lockablevector3row.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.checkboxrow.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.inputrow.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.textrow.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.colorrow.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.selectrow.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.numberrow.js'></script>
-<script src='editor-ui-libs/ui.rows/ui.texturerow.js'></script>
-<script src='editor-ui-libs/ui.texture.js'></script>
-<script src='editor-ui-libs/ui.editor.js'></script>
-<script src='editor-ui-libs/Config.js'></script>
+<script src='editor-ui/ui.js'></script>
+<script src='editor-ui/ui.extras.js'></script>
+<script src='editor-ui/ui.rows/ui.vector2row.js'></script>
+<script src='editor-ui/ui.rows/ui.vector3row.js'></script>
+<script src='editor-ui/ui.rows/ui.lockablevector2row.js'></script>
+<script src='editor-ui/ui.rows/ui.lockablevector3row.js'></script>
+<script src='editor-ui/ui.rows/ui.checkboxrow.js'></script>
+<script src='editor-ui/ui.rows/ui.inputrow.js'></script>
+<script src='editor-ui/ui.rows/ui.textrow.js'></script>
+<script src='editor-ui/ui.rows/ui.colorrow.js'></script>
+<script src='editor-ui/ui.rows/ui.selectrow.js'></script>
+<script src='editor-ui/ui.rows/ui.numberrow.js'></script>
+<script src='editor-ui/ui.rows/ui.texturerow.js'></script>
+<script src='editor-ui/ui.texture.js'></script>
+<script src='editor-ui/ui.editor.js'></script>
+<script src='editor-ui/Config.js'></script>
 
 <!-- Load signals.min.js -->
 <script src='../vendor/signals.min.js'></script>
@@ -32,12 +32,9 @@
 
 <body>
 	<div id='container' >
-		<div id='leftSidebar' class='panel'>
-		</div>
-		<div id='rightSidebar' class='panel'>
-		</div>
+		<div id='leftSidebar' class='panel'></div>
+		<div id='rightSidebar' class='panel'></div>
 	</div>
-
 
     	<script src='../scripts/injected_script.js'></script>
 
