--- a/panel/panel.html
+++ b/panel/panel.html
@@ -46,7 +46,9 @@
 	<script src="ui/panel-ui-nomaterial.js"></script>
 	<script src="ui/panel-ui-material.js"></script>
 	<script src="ui/panel-ui-material-shader.js"></script>
+	<script src='ui/panel-ui-texture.js'></script>
 	<script src='ui/panel-ui-settings.js'></script>
+	<script src='ui/panel-ui-splash.js'></script>
 	<script src='ui/panel-ui-treeview.js'></script>
 
 	<script src="ui/panel-ui-texture.js"></script>
