--- a/src/panel/panel.html
+++ b/src/panel/panel.html
@@ -39,6 +39,7 @@
 	<script src='ui/panel-ui-about.js'></script>
 	<script src='ui/panel-ui-noobject3d.js'></script>
 	<script src='ui/panel-ui-object3d.js'></script>
+	<script src='ui/panel-ui-object3dactions.js'></script>
 	<script src='ui/panel-ui-nogeometry.js'></script>
 	<script src='ui/panel-ui-geometry.js'></script>
 	<script src='ui/panel-ui-geometry-sphere.js'></script>
