added the examples tab

--- a/src/panel/panel.html
+++ b/src/panel/panel.html
@@ -37,6 +37,7 @@
 	</div>
 
 	<script src='ui/panel-ui-about.js'></script>
+	<script src='ui/panel-ui-examples.js'></script>
 	<script src='ui/panel-ui-noobject3d.js'></script>
 	<script src='ui/panel-ui-object3d.js'></script>
 	<script src='ui/panel-ui-object3dactions.js'></script>
