--- a/examples/boilerplate.html
+++ b/examples/boilerplate.html
@@ -59,13 +59,13 @@
 	})
 
 
-	// // add a torus	
-	// var geometry	= new THREE.SphereGeometry(0.5);
-	// var material	= new THREE.MeshPhongMaterial(); 
-	// var mesh2	= new THREE.Mesh( geometry, material );
-	// mesh2.name	= 'sphere'
-	// mesh2.position.x= 1
-	// mesh.add( mesh2 );
+	// add a torus	
+	var geometry	= new THREE.SphereGeometry(0.5);
+	var material	= new THREE.MeshPhongMaterial(); 
+	var mesh2	= new THREE.Mesh( geometry, material );
+	mesh2.name	= 'sphere'
+	mesh2.position.x= 1
+	scene.add( mesh2 );
 	
 	//////////////////////////////////////////////////////////////////////////////////
 	//		render the whole thing on the page
